PLAT-141497: ColorPicker - layout bug (#566)
* changed bg color for silicon night

* added padding to palette where layout was broken

* changed bg-color for Silicon

* code changes based on review

--- a/styles/colors-silicon-day.less
+++ b/styles/colors-silicon-day.less
@@ -134,7 +134,13 @@
 
 // ColorPicker
 // ---------------------------------------
-@agate-colorpicker-bg-color: fade(@agate-black, 50%);
+@agate-colorpicker-bg-color: @agate-popup-bg-color;
+@agate-colorpicker-sliders-font-color: @agate-black;
+@agate-colorpicker-slider-bar-bg-color: fade(@agate-black, 50%);
+@agate-colorpicker-slider-fill-bg-color: @agate-black;
+@agate-colorpicker-slider-knob-bg-color: @agate-black;
+@agate-colorpicker-focus-slider-bar-bg-color: fade(@agate-black, 50%);
+@agate-colorpicker-swatch-icon-color: @agate-black;
 
 // ContextualPopup
 // ---------------------------------------
